--- a/src/Common/styles.css
+++ b/src/Common/styles.css
@@ -13,8 +13,18 @@ h1 {
     background-color: azure;
 }
 
+.my-menu-item:hover{
+    color: azure;
+}
+
+.my-link-panel:hover{
+}
+
 .my-bg-color-header{
     background-color: deepskyblue;
+}
+.my-cursor-pointer {
+    cursor: pointer;
 }
 
 .my-bg-color-content{
@@ -46,11 +56,23 @@ h1 {
 .my-text-bold {
     font-weight: bold;
 }
+.my-text-align-left{
+    text-align: left;
+}
 .my-text-align-center{
     text-align: center;
 }
 .my-text-align-right{
     text-align: right;
+}
+.my-center-v15{
+    padding: 15px 0;
+}
+.my-center-v20{
+    padding: 20px 0;
+}
+.my-center-v25{
+    padding: 25px 0;
 }
 /* Small Devices, Tablets */
 /* @media only screen and (min-width : 768px) {
