--- a/src/Common/styles.css
+++ b/src/Common/styles.css
@@ -13,28 +13,41 @@ h1 {
     background-color: azure;
 }
 
-.my-menu-item:hover{
-    color: azure;
+/* common tag */
+.my-carousel-tag-name{
+    color: dimgray;
+}
+.my-list-group-item{
+    color: #0d6efd;
 }
 
-.my-link-panel:hover{
-}
-
+/* small properties */
 .my-bg-color-header{
-    background-color: deepskyblue;
-}
-.my-cursor-pointer {
-    cursor: pointer;
+    background-color: #0d6efd;
 }
 
 .my-bg-color-content{
-    background-color: inherit;
+    background-color: azure;
 }
 
 .my-bg-color-footer{
     background-color: silver;
 }
 
+.my-menu-item:hover{
+    color: azure;
+}
+
+.my-cursor-pointer {
+    cursor: pointer;
+}
+
+.my-border-color-white {
+    border-color: white !important;
+}
+.my-border-none {
+    border: none !important;
+}
 .my-border-1px-solid-red {
     border: 1px solid rgb(173, 6, 6);
 }
@@ -46,12 +59,19 @@ h1 {
     height: 30px;
 }
 
+.my-width-100per {
+    width: 100%;
+}
+
 .my-bg-color-royalblue {
     background-color: royalblue;
 }
 
-.my-width-100per {
-    width: 100%;
+.my-text-color-white{
+    color: white !important;
+}
+.my-text-color-blue{
+    color: #0d6efd !important;
 }
 .my-text-bold {
     font-weight: bold;
@@ -65,6 +85,11 @@ h1 {
 .my-text-align-right{
     text-align: right;
 }
+
+.my-margin-right-20px{
+    margin-right: 20px;
+}
+
 .my-center-v15{
     padding: 15px 0;
 }
@@ -75,8 +100,8 @@ h1 {
     padding: 25px 0;
 }
 /* Small Devices, Tablets */
-/* @media only screen and (min-width : 768px) {
+@media only screen and (min-width : 768px) {
     body {
         background-color: darkkhaki;
     }
-} */
+}
